fix(Portfolio): img overlapping bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ body {
 	width: 100%;
 	height: 100%;
 	margin-top: 0px;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgba(0, 0, 0, 0.2);
 	position: absolute;
 	left: 0px;
 	top: 0px;
@@ -317,8 +317,25 @@ body {
 .fixedNav #navigation {
 	position: fixed;
 	top: 0;
-
 }
+
+.loader {
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	z-index: 1000;
+	margin: 0;
+}
+
+.loader .inner {
+	width: 100%;
+	height: 100%;
+	background: url(../img/loader.gif) center center no-repeat;
+}
+
 
 /*mouse below*/
 
